Rythmos: Remove usage of deprecated include_directories() (TriBITSPub/TriBITS#429)
The deprecated TriBITS macro include_directories() now issues a CMake
Deprecation warning.  The fix is to use tribits_include_directories() instead
and use raw CMake include_directories() where that is the behavior you want.

--- a/adapters/gaasp/src/CMakeLists.txt
+++ b/adapters/gaasp/src/CMakeLists.txt
@@ -22,7 +22,7 @@ APPEND_GLOB(SOURCES ${DIR}/*.cpp)
 
 ASSERT_DEFINED(${PACKAGE_NAME}_ENABLE_GAASP_INTERNAL_TPL)
 IF(${PACKAGE_NAME}_ENABLE_GAASP_INTERNAL_TPL)
-  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../tpl_src)
+  TRIBITS_INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../tpl_src)
 ENDIF()
 
 #
